[gd_scene load_steps=9 format=3 uid="uid://cv8hie152bayg"]

[ext_resource type="Script" path="res://scenes/battle_scene/battle_scene.gd" id="1_vdvqa"]
[ext_resource type="Script" path="res://addons/card_engine/battle/battle_state.gd" id="2_bdq53"]
[ext_resource type="PackedScene" uid="uid://bhhh1eo8uyax6" path="res://objects/card_plane/card_plane.tscn" id="2_mdxbd"]
[ext_resource type="Script" path="res://addons/card_engine/task/card_fiber.gd" id="2_vl6gp"]
[ext_resource type="Resource" uid="uid://ccejnbeeab8k2" path="res://data/rulesets/default_rules.tres" id="3_qp2vo"]
[ext_resource type="Script" path="res://scenes/battle_scene/player_agent.gd" id="4_5xqig"]
[ext_resource type="Script" path="res://scenes/battle_scene/dummy_agent.gd" id="5_rwywo"]
[ext_resource type="Resource" uid="uid://e56r0lowi2ag" path="res://data/decks/test_deck.tres" id="6_e4m36"]

[node name="BattleScene" type="Node3D"]
script = ExtResource("1_vdvqa")

[node name="BattleState" type="Node" parent="."]
script = ExtResource("2_bdq53")
rules = ExtResource("3_qp2vo")

[node name="CardFiber" type="Node" parent="BattleState"]
script = ExtResource("2_vl6gp")

[node name="PlayerAgent" type="Node" parent="BattleState"]
script = ExtResource("4_5xqig")
deck = ExtResource("6_e4m36")

[node name="OpponentAgent" type="Node" parent="BattleState"]
script = ExtResource("5_rwywo")
deck = ExtResource("6_e4m36")

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.408426, 0.912791, 0, -0.912791, 0.408426, 4.76837e-07, 23.4694, 6.16592)
fov = 40.0

[node name="Field" type="Node3D" parent="."]

[node name="BackRow1" parent="Field" instance=ExtResource("2_mdxbd")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -4.5, 0, 0)

[node name="BackRow2" parent="Field" instance=ExtResource("2_mdxbd")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -1.5, 0, 0)

[node name="BackRow3" parent="Field" instance=ExtResource("2_mdxbd")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 1.5, 0, 0)

[node name="BackRow4" parent="Field" instance=ExtResource("2_mdxbd")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 4.5, 0, 0)

[node name="FrontRow1" parent="Field" instance=ExtResource("2_mdxbd")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -1.5, 0, -4)

[node name="FrontRow2" parent="Field" instance=ExtResource("2_mdxbd")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 1.5, 0, -4)

[node name="OpponentBackRow1" parent="Field" instance=ExtResource("2_mdxbd")]
transform = Transform3D(-1, 8.74228e-08, 3.82137e-15, 0, -4.37114e-08, 1, 8.74228e-08, 1, 4.37114e-08, 4.5, 0, -12.0667)

[node name="OpponentBackRow2" parent="Field" instance=ExtResource("2_mdxbd")]
transform = Transform3D(-1, 8.74228e-08, 3.82137e-15, 0, -4.37114e-08, 1, 8.74228e-08, 1, 4.37114e-08, 1.5, 0, -12.0667)

[node name="OpponentBackRow3" parent="Field" instance=ExtResource("2_mdxbd")]
transform = Transform3D(-1, 8.74228e-08, 3.82137e-15, 0, -4.37114e-08, 1, 8.74228e-08, 1, 4.37114e-08, -1.5, 0, -12.0667)

[node name="OpponentBackRow4" parent="Field" instance=ExtResource("2_mdxbd")]
transform = Transform3D(-1, 8.74228e-08, 3.82137e-15, 0, -4.37114e-08, 1, 8.74228e-08, 1, 4.37114e-08, -4.5, 0, -12.0667)

[node name="OpponentFrontRow1" parent="Field" instance=ExtResource("2_mdxbd")]
transform = Transform3D(-1, 8.74228e-08, 3.82137e-15, 0, -4.37114e-08, 1, 8.74228e-08, 1, 4.37114e-08, 1.5, 0, -8.06667)

[node name="OpponentFrontRow2" parent="Field" instance=ExtResource("2_mdxbd")]
transform = Transform3D(-1, 8.74228e-08, 3.82137e-15, 0, -4.37114e-08, 1, 8.74228e-08, 1, 4.37114e-08, -1.5, 0, -8.06667)

[node name="Deck" parent="." instance=ExtResource("2_mdxbd")]
transform = Transform3D(0.965926, -0.258819, -1.13133e-08, 0, -4.37114e-08, 1, -0.258819, -0.965926, -4.2222e-08, 8, 0, 1)
card = null

[node name="Hand" type="Node3D" parent="."]

[node name="CardPlane" parent="Hand" instance=ExtResource("2_mdxbd")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1, 3.99704)
highlight = 1

[node name="CardPlane2" parent="Hand" instance=ExtResource("2_mdxbd")]
transform = Transform3D(0.996137, 0.0878164, 3.83858e-09, 0, -4.37114e-08, 1, 0.0878164, -0.996137, -4.35425e-08, 1.25592, 0.726711, 3.92918)

[node name="CardPlane3" parent="Hand" instance=ExtResource("2_mdxbd")]
transform = Transform3D(0.987075, 0.16026, 7.0052e-09, 0, -4.37114e-08, 1, 0.16026, -0.987075, -4.31464e-08, 2.39276, 0.531306, 4)

[node name="CardPlane4" parent="Hand" instance=ExtResource("2_mdxbd")]
transform = Transform3D(0.964498, 0.264092, 1.15438e-08, 4.38349e-16, -4.37114e-08, 1, 0.264092, -0.964498, -4.21595e-08, 3.4197, 0.229221, 4.17371)

[node name="OpponentHand" type="Node3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.0185366, -0.0319576, -12.0767)

[node name="CardPlane" parent="OpponentHand" instance=ExtResource("2_mdxbd")]
transform = Transform3D(1, -2.97886e-09, 2.26267e-08, -2.26267e-08, -0.258819, 0.965926, 2.97886e-09, -0.965926, -0.258819, 1.06171e-07, 1, 2.93129)
card = null
